--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
 
-<mlb-parking-widget #widget [vendor]="vendor"></mlb-parking-widget>
+<mlb-parking-widget #widget [vendor]="vendor" (buying)="addToCart($event)"></mlb-parking-widget>
+
+<h2>Shopping cart</h2>
+<mat-list>
+    <mat-list-item *ngFor="let item of items">
+        {{ item.name }}
+    </mat-list-item>
+</mat-list>
