The assets from the package are now installed correctly. Changing language still doesn't work.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <mat-radio-group aria-label="{ Select a language | translate }" (change)="setLanguage($event.value)">
-    <mat-radio-button value="it_IT">English</mat-radio-button>
-    <mat-radio-button value="en_US">Italiano</mat-radio-button>
+    <mat-radio-button value="it-IT">Italiano</mat-radio-button>
+    <mat-radio-button value="en-US">English</mat-radio-button>
 </mat-radio-group>
 
 <mlb-parking-widget #widget [vendor]="vendor" (buying)="addToCart($event)"></mlb-parking-widget>
